--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -16,5 +16,6 @@ RUN if [ "${REINSTALL_CMAKE_VERSION_FROM_SOURCE}" != "none" ]; then \
 
 # [Optional] Uncomment this section to install additional packages.
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends enscript ghostscript poppler-utils acl
+    && apt-get -y install --no-install-recommends enscript ghostscript \
+		poppler-utils acl clang-16
     # ltrace
