--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,9 @@
+# FROM mcr.microsoft.com/devcontainers/cpp:0-debian-11
 FROM mcr.microsoft.com/devcontainers/cpp:debian
-# https://github.com/microsoft/vscode-dev-containers/tree/main/containers/debian
 
 ARG REINSTALL_CMAKE_VERSION_FROM_SOURCE="none"
+# keep CXX here so google test works via the command line
+ENV CXX='/usr/bin/clang++-16 -fstandalone-debug -g'
 
 # Optionally install the cmake for vcpkg
 COPY ./reinstall-cmake.sh /tmp/
@@ -16,10 +18,7 @@ RUN if [ "${REINSTALL_CMAKE_VERSION_FROM_SOURCE}" != "none" ]; then \
 
 # [Optional] Uncomment this section to install additional packages.
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends enscript ghostscript \
-		poppler-utils acl clang-16
-    # ltrace
-
+    && apt-get -y install --no-install-recommends enscript ghostscript poppler-utils clang-16
 # RUN wget http://http.us.debian.org/debian/pool/main/v/valgrind/valgrind_3.20.0-2.1_arm64.deb && sudo apt-get -y install ./valgrind_3.20.0-2.1_arm64.deb 
 RUN wget http://http.us.debian.org/debian/pool/main/v/valgrind/valgrind_3.20.0-2.1_amd64.deb && \
  sudo apt-get -y install ./valgrind_3.20.0-2.1_amd64.deb && \
