--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "printToPDF",
             "type": "shell",
-            "command": "enscript -C -T 2 -p - -M Letter -Ecpp --color -fCourier8 src/*.cpp include/*.h | ps2pdf - bin/src.pdf",
+            "command": "enscript -C -T 2 -p - -M Letter -Ecpp --color -fCourier8 src/*.cpp include/*.h test/*.cpp | ps2pdf - bin/src.pdf",
             "group": {
                 "kind": "none"
             },
