--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# googletest
+googletest/
+build/
+
 *.exe
 bin/main
 bin/*.o
