--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # googletest
-googletest/
-build/
+**/googletest/
+**/build/
 
 *.exe
 bin/main
